Fix layout of ViewManager delete confirmation

--- a/src/Mapbender/CoreBundle/Resources/public/element/mbViewManager.scss
+++ b/src/Mapbender/CoreBundle/Resources/public/element/mbViewManager.scss
@@ -8,8 +8,7 @@
     position: relative; // for anchoring of absolute-positioned .popover
     .popover {
       display: initial;
-      width: 12em;
-      padding: 0.5em;
+      padding: 1em;
       left: initial;
       right: -2.5ch;
 
